--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../styles/mobile.css" media="only screen and (max-width: 768px)" />
-  <link rel="stylesheet" href="../styles/desktop.css" media="only screen and (min-width: 769px)" />
-  <link rel ="stylesheet" href = "../styles/hero.css" />
-  <link rel="stylesheet" href="../styles/solutions.css" />
-  <link rel="stylesheet" href="../styles/gallery.css" />
-  <link rel="stylesheet" href="../styles/about.css" />
-  <link rel="stylesheet" href="../styles/footer.css" />
+  <link rel="stylesheet" href="styles/mobile.css" media="only screen and (max-width: 768px)" />
+  <link rel="stylesheet" href="styles/desktop.css" media="only screen and (min-width: 769px)" />
+  <link rel ="stylesheet" href = "styles/hero.css" />
+  <link rel="stylesheet" href="styles/solutions.css" />
+  <link rel="stylesheet" href="styles/gallery.css" />
+  <link rel="stylesheet" href="styles/about.css" />
+  <link rel="stylesheet" href="styles/footer.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
