--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </nav>
   <section class="section-hero" id="hero">
     <video class="hero-video" autoplay muted loop playsinline>
-      <source src="../images/32342-392240944.mp4" type="video/mp4">
+      <source src="/images/32342-392240944.mp4" type="video/mp4">
     </video>
   <div class="hero-content">
     <p class="section-caption">Our Mission</p>
@@ -361,7 +361,7 @@
                             <p>
                                 We take pride in providing services that bring joy to our clients.
                             </p>                
-                            <a href="/main/work.html" class="contact-btn">
+                            <a href="work.html" class="contact-btn">
                                 View more
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
