--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <div class="Media-content">
                     <div class="Media-container">
                         <div class="Media-image">
-                            <img src="../images/picture4.jpeg" alt="Gallery Image 1">
+                            <img src="/images/picture4.jpeg" alt="Gallery Image 1">
                         </div>
                     </div>
                     <div class="Media-text-container">
