--- a/work.html
+++ b/work.html
@@ -88,7 +88,7 @@
     </tr>
     <tr>
         <td colspan="2" class="work-image-cell">
-        <img src="../images/picture1.jpeg" alt="Work Image 1" class="work-image">
+        <img src="images/picture1.jpeg" alt="Work Image 1" class="work-image">
         </td>
     </tr>
     <tr>
@@ -105,7 +105,7 @@
       <div class="footer-content">
           <div class="footer-brand">
                     <div class="footer-logo">
-                        <img src="../images/logo.png" alt="Company Logo">
+                        <img src="images/logo.png" alt="Company Logo">
                         <p>Commercial Refrigeration & Services LTD.</p>
                     </div>
                     <div class="footer-address">
