--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
     <table class="work-table desktop-view">
     <tr>
         <td class="work-image-cell">
-        <img src="../images/picture1.jpeg" alt="Work Image 1" class="work-image">
+        <img src="images/picture1.jpeg" alt="Work Image 1" class="work-image">
         </td>
         <td class="work-number-cell">01</td>
         <td class="work-title-cell">Refrigeration setup at Zango Company, Makeni.</td>
