--- a/work.html
+++ b/work.html
@@ -45,61 +45,79 @@
 <nav class="mobile-navbar">
   <div class="CRC-logo"></div>
   <ul class="menu" style="padding: 0;">
-    <li><a href="#home">Home</a></li>
-    <li><a href="#solutions">Solutions</a></li>
-    <li><a href="#gallery">Gallery</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#contact">Contact Us</a></li>
+    <li><a href="index.html#hero">Home</a></li>
+    <li><a href="index.html#solutions">Solutions</a></li>
+    <li><a href="index.html#Gallery">Gallery</a></li>
+    <li><a href="index.html#about">About</a></li>
+    <li><a href="index.html#contact">Contact Us</a></li>
   </ul>
 </nav>
-  <section class="Work-life" id="work-life">
-    <div class="work-life-content">
-        <div class="Work-header">
-            <p class="work-title">Our Work</p>
-        </div>
+<section class="Work-life" id="work-life">
+  <div class="work-life-content">
+    <div class="Work-header">
+      <p class="work-title">Our Work</p>
+    </div>
+    
+    <!-- Desktop Table (single table for all items) -->
     <table class="work-table desktop-view">
-    <tr>
+      <tr>
         <td class="work-image-cell">
-        <img src="images/picture1.jpeg" alt="Work Image 1" class="work-image">
+          <img src="images/picture1.jpeg" alt="Work Image 1" class="work-image">
         </td>
         <td class="work-number-cell">01</td>
         <td class="work-title-cell">Refrigeration setup at Zango Company, Makeni.</td>
         <td class="work-details-cell">
-        <p>We installed a state-of-the-art refrigeration system at Zango Company, ensuring optimal cooling for their products.</p>
+          <p>We installed a state-of-the-art refrigeration system at Zango Company, ensuring optimal cooling for their products.</p>
         </td>
-    </tr>
-        <tr>
+      </tr>
+      <tr>
         <td class="work-image-cell">
-        <img src="../images/picture1.jpeg" alt="Work Image 1" class="work-image">
+          <img src="images/picture1.jpeg" alt="Work Image 2" class="work-image">
         </td>
         <td class="work-number-cell">02</td>
         <td class="work-title-cell">Refrigeration setup at Zango Company, Makeni.</td>
         <td class="work-details-cell">
-        <p>We installed a state-of-the-art refrigeration system at Zango Company, ensuring optimal cooling for their products.</p>
+          <p>We installed a state-of-the-art refrigeration system at Zango Company, ensuring optimal cooling for their products.</p>
         </td>
-    </tr>
+      </tr>
     </table>
 
-    <!-- Mobile table -->
+    <!-- Mobile Tables (separate table for each item) -->
     <table class="work-table mobile-view">
-    <tr>
+      <tr>
         <td class="work-number-cell">01</td>
         <td class="work-title-cell">Refrigeration setup at Zango Company, Makeni.</td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td colspan="2" class="work-image-cell">
-        <img src="images/picture1.jpeg" alt="Work Image 1" class="work-image">
+          <img src="images/picture1.jpeg" alt="Work Image 1" class="work-image">
         </td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
         <td colspan="2" class="work-details-cell">
-        <p>We installed a state-of-the-art refrigeration system at Zango Company, ensuring optimal cooling for their products.</p>
+          <p>We installed a state-of-the-art refrigeration system at Zango Company, ensuring optimal cooling for their products.</p>
         </td>
-    </tr>
+      </tr>
     </table>
 
-    </div>
-  </section>
+    <table class="work-table mobile-view">
+      <tr>
+        <td class="work-number-cell">02</td>
+        <td class="work-title-cell">Refrigeration setup at Zango Company, Makeni.</td>
+      </tr>
+      <tr>
+        <td colspan="2" class="work-image-cell">
+          <img src="images/picture1.jpeg" alt="Work Image 2" class="work-image">
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2" class="work-details-cell">
+          <p>We installed a state-of-the-art refrigeration system at Zango Company, ensuring optimal cooling for their products.</p>
+        </td>
+      </tr>
+    </table>
+  </div>
+</section>
   <footer class="footer" id="contact">
     <div class="container">
       <div class="footer-content">
