--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                             <p>
                                 We take pride in providing services that bring joy to our clients.
                             </p>                
-                            <a href="work.html" class="contact-btn">
+                            <a href="work.html" class="contact-btn left-align-btn">
                                 View more
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
