--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
     <img src="logo.png" alt="Company Logo" />
   </div>
 
-  <!-- Center: Main Menu -->
   <ul class="menu nav-center">
     <li><a href="#hero">Home</a></li>
     <li><a href="#solutions">Solutions</a></li>
-    <li><a href="#Gallery">Gallery</a></li>
+    <li><a href="#gallery">Gallery</a></li>
     <li><a href="#about">About</a></li>
   </ul>
 
